Added logic of break to be foreced as 30 minutes, also display shortage days

--- a/templates/summary.html
+++ b/templates/summary.html
@@ -16,6 +16,12 @@
             vertical-align: middle !important;
             text-align: center !important;  /* Optional: Align content in the center */
         }
+
+        .short-day {
+            background-color: yellow !important;
+        }
+
+
     </style>
 </head>
 <body>
